# root-check

./: .gitignore  README.md
apex-root/app/: build.gradle.kts
apex-root/app/src/main/: AndroidManifest.xml
apex-root/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  native-lib.cpp
apex-root/app/src/main/cpp/ai_engine/: ai_engine.h
apex-root/app/src/main/cpp/bare_syscall/: syscall_arm64.cpp
apex-root/app/src/main/cpp/common/: syscall.h  utils.cpp
apex-root/app/src/main/cpp/consensus/: replica_manager.cpp  replica_manager.h
apex-root/app/src/main/cpp/consensus/p2p_comm/: replica_socket.h
apex-root/app/src/main/cpp/detect/: anti_hiding.cpp  layer14_virtualxposed.h  layer15_dangerous_apps.h  layer16_magisk_extensions.h  layer5_sidechannel.cpp  layer8_magisk.cpp
apex-root/app/src/main/cpp/ebpf/: ebpf_manager.cpp
apex-root/app/src/main/cpp/hid/: hwid_spoof.cpp
apex-root/app/src/main/cpp/include/: apex_common.h  dirent_compat.h
apex-root/app/src/main/cpp/kernel_observer/: proc_scanner.cpp
apex-root/app/src/main/cpp/micro_services/sandbox/: sandbox_isolator.cpp
apex-root/app/src/main/cpp/micro_services/services/ms005_sidechannel/: plugin.cpp
apex-root/app/src/main/cpp/micro_services/services/ms006_kernel_probe/: plugin.cpp
apex-root/app/src/main/cpp/micro_services/services/ms017_crypto_verify/: plugin.cpp
apex-root/app/src/main/cpp/namespace/: namespace_isolation.cpp
apex-root/app/src/main/cpp/trusted_root/crypto/: crypto_primitives.cpp  crypto_primitives.h  oqs_signature.h
apex-root/app/src/main/cpp/trusted_root/key_management/: key_derivation.cpp  key_derivation.h
apex-root/app/src/main/cpp/trusted_root/signing/: signing_center.cpp  signing_center.h
apex-root/app/src/main/cpp/updater/: updater.h
apex-root/app/src/main/cpp/updater/rule_downloader/: downloader.cpp
apex-root/app/src/main/java/com/apex/root/core/: EventBus.kt  NativeLibraryLoader.kt
apex-root/app/src/main/java/com/apex/root/core/error/: AppError.kt
apex-root/app/src/main/java/com/apex/root/core/permission/: PermissionManager.kt
apex-root/app/src/main/java/com/apex/root/data/: DetectionCache.kt  FingerprintDatabase.kt
apex-root/app/src/main/java/com/apex/root/data/jni/: NativeBridge.kt
apex-root/app/src/main/java/com/apex/root/data/repository/: RootDetectRepositoryImpl.kt
apex-root/app/src/main/java/com/apex/root/domain/model/: ValueObjects.kt
apex-root/app/src/main/java/com/apex/root/domain/repository/: IRootDetectRepository.kt
apex-root/app/src/main/java/com/apex/root/ipc/: DetectionProtocol.kt  ProtoCodec.kt
apex-root/app/src/main/java/com/apex/root/ipc/client/: SecureSocketClient.kt
apex-root/app/src/main/java/com/apex/root/ui/compose/: ApexRadarScanner.kt  ApexThreatIndicator.kt  AppNavigation.kt  GlassComponents.kt  LightGlassComponents.kt  LiquidGlassContainer.kt  LiquidGlassModifier.kt  Theme.kt
apex-root/app/src/main/java/com/apex/root/ui/compose/components/: ClickableExtensions.kt  EmptyState.kt
apex-root/app/src/main/java/com/apex/root/ui/compose/screens/: AboutScreen.kt  BaselineComparisonScreen.kt  ConfigScreen.kt  DashboardScreen.kt  FeatureTestScreen.kt  FridaConsoleScreen.kt  GlassLogViewerScreen.kt  HideModeScreen.kt  HistoryScreen.kt  KernelInfoScreen.kt  LSPosedManagerScreen.kt  PermissionsScreen.kt  SettingsScreen.kt  SplashScreen.kt  TimingChartScreen.kt  WhitelistScreen.kt
apex-root/app/src/main/java/com/apex/root/util/: ReportExporter.kt
apex-root/app/src/main/java/com/apex/root/viewmodel/trusted/: ApexViewModel.kt  ScanViewModel.kt
apex-root/app/src/main/res/values/: strings.xml  styles.xml
apex-root/app/src/main/res/values-en/: strings.xml
apex-root/app/src/test/java/com/apex/root/util/: ReportExporterTest.kt
apex-root/ctrl/: apex_self_hide.cpp
apex-root/jni/: native_bridge.cpp
apex-root/module/: INSTALL.md  README.md  build_libph.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
apex-root/module/sepolicy/: sepolicy.rule
apex-root/module/system/lib64/: ph_spoof.cpp
